# osx-userland-chromium

./: .gitignore  CHANGELOG.md  LICENSE  README.md  check_chromium_versions.sh  code-changes.md  init_repo.sh  test_features.html  test_patches_on_latest.sh
.github/workflows/: documentation.yml
config/: .gclient  args.gn
docs/: build-guide.md  code-changes.md  enterprise-features.md  macos-integration.md  troubleshooting.md
patches/: double-click.patch  history-case-sensitive.patch  omnibox-multiclick.patch  private-network.patch  session-restore.patch  tab-search-url.patch  triple-click.patch  user-agent.patch
scripts/: build.sh  install_macos_gui.sh  restore_session.sh  test_features.sh
